--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "admin-lte": "3.2",
     "axios": "^1.6.2",
     "json-server": "^0.17.4",
+    "node": "^21.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
